guestbook/guestbook-ui-ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: guestbook-ui
spec:
  rules:
    - host: guestbook-ui.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
